--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.15",
+    "webpack-dashboard": "^1.1.1",
     "webpack-dev-server": "^3.1.3"
   }
 }
