--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "export NODE_ENV=production; yarn webpack"
   },
   "dependencies": {
+    "lodash.shuffle": "^4.2.0",
     "normalize.css": "^8.0.0"
   },
   "devDependencies": {
@@ -21,7 +22,6 @@
     "style-loader": "^0.21.0",
     "webpack": "^4.2.0",
     "webpack-cli": "^2.0.15",
-    "webpack-dashboard": "^1.1.1",
     "webpack-dev-server": "^3.1.3"
   }
 }
