--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "license": "MIT",
   "scripts": {
     "dev": "yarn webpack-dev-server",
-    "build": "export NODE_ENV=production; yarn webpack"
+    "build": "export NODE_ENV=production; yarn webpack",
+    "deploy": "yarn build && gh-pages -d build"
   },
   "dependencies": {
     "lodash.shuffle": "^4.2.0",
@@ -18,6 +19,7 @@
     "@babel/preset-env": "^7.0.0-beta.44",
     "babel-loader": "^8.0.0-beta",
     "css-loader": "^0.28.11",
+    "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
     "style-loader": "^0.21.0",
     "webpack": "^4.2.0",
