--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "dependencies": {
     "lodash.shuffle": "^4.2.0",
-    "normalize.css": "^8.0.0"
+    "normalize.css": "^8.0.0",
+    "object-assign-deep": "^0.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0-beta.46",
