--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "yarn webpack-dev-server",
-    "build": "export NODE_ENV=production; rm -rf build && yarn webpack",
-    "deploy": "yarn build && gh-pages -d build"
+    "build": "NODE_ENV=production rm -rf build && yarn webpack",
+    "deploy": "yarn build && gh-pages -d build",
+    "test": "NODE_ENV=test jest"
   },
   "dependencies": {
     "lodash.shuffle": "^4.2.0",
@@ -23,6 +24,7 @@
     "file-loader": "^1.1.11",
     "gh-pages": "^1.1.0",
     "html-webpack-plugin": "^3.2.0",
+    "jest": "^22.4.3",
     "style-loader": "^0.21.0",
     "webpack": "^4.6.0",
     "webpack-cli": "^2.0.15",
